feat: premium system, splash logo, activation code, and project docs
- Custom splash screen logo (512x512 vector drawable with medical cross,
  book, ECG line, capsules, and app title)
- Redesigned launcher icon to match splash style
- Product flavors: free (all unlocked, no subscription UI) and premium
  (trial + subscription + activation code)
- Native BuildConfigModule to expose IS_FREE flag to JavaScript
- PremiumContext with trial, subscription, and code activation support
- PremiumGate component for premium-gated screens
- Secret activation code via SHA-256 hash (easter egg in AboutScreen)
- Hidden subscription UI in free build (HomeScreen, AboutScreen, ToolsScreen)
- Project documentation: ARCHITECTURE.md, DEVELOPMENT.md, DATA.md, FEATURES.md
- Updated README.md with build flavors and project structure